Fix footer on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,8 @@ html {
 
 body {
   font-family: Arial;
+  position: relative;
+  min-height: 100vh;
 }
 
 /* ||Navbar */
